<resources>
    <string name="app_name">Gaso</string>
    <string name="action_settings">Configurações</string>
    <string name="gas">Gas</string>
    <string name="my_car">Meu Carro</string>
    <string name="expense">Gastos</string>
    <string name="no_car_text">Cadastre e selecione um carro.</string>
    <string name="connect">Conectar OBD</string>
    <string name="user_list">Lista de Usuarios</string>
    <string name="car_list">Lista de Carros</string>
    <string name="title_activity_register">Cadastro de Usuario e Carro</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="car">Carro</string>
    <string name="model">Modelo do Carro</string>
    <string name="car_description">Descrição do Carro</string>
    <string name="password">Senha (Opcional) </string>
    <string name="confirm">Confirmar</string>
    <string name="user_and_car_registered">Usuario e carro cadastrados com sucesso</string>
    <string name="user_registered">Usuario cadastrado com sucesso</string>
    <string name="car_registered">Carro cadastrados com sucesso</string>
    <string name="title_activity_car_register">Cadastro de Carro</string>
    <string name="title_activity_user_register">Cadastro de Usuario</string>
    <string name="title_activity_user_list">Selecione um usuario</string>
    <string name="title_activity_car_list">Selecione um carro</string>
    <string name="map">Mapa</string>
    <string name="stations_list">Lista de Postos</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="gaso_googlemaps_key">AIzaSyD75hEMtsbrsokY3ypMLgbrauQT0T7uZ_g</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_spent_list">Lista de Gastos</string>
    <string name="title_activity_station_details">Detalhes do posto</string>
    <string name="title_activity_bluetooth_device">BluetoothDeviceActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email Invalido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_create_account">Não tem uma conta? Cadastre-se</string>
    <string name="passwordConfirmation">Confirmação de senha (Opcional) </string>
    <string name="action_logout">Sair</string>
    <string name="title_activity_login2">Sign in2</string>
    <string name="action_export">Exportar dados para csv</string>
    <string name="welcome_car">Oi! Novo por aqui? Vamos cadastrar seu primeiro carro.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="bluetooth_device_key" translatable="false">bluetoothDeviceKey</string>
    <string name="bluetooth_not_found_error">Couldn\'t find a Bluetooth Adapter</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled.</string>
    <string name="notification_content_title">Analisando sua viagem</string>
    <string name="bluetooth_connected_starting_logging">Conectado a %1$s - %2$s. Começando a leitura dos dados.</string>
    <string name="bluetooth_connecting_errror">Erro conectando a %1$s - %2$s.</string>
    <string name="bluetooth_enabled_message">Bluetooth enabled. Click to start logging.</string>
    <string name="start_day_time">%1$s, %2$s</string>
    <string name="start_date">%1$s %2$s</string>
    <string name="trip_samples">%1$d samples</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="trip_duration">%1$s m</string>
    <string name="vehicle">Vehicle</string>
    <string name="placehold_str" translatable="false">---</string>
    <string name="location">Location</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="duration_placehold_str" translatable="false">40 min</string>
    <string name="distance_placehold_str" translatable="false">350 km</string>
    <string name="samples_placehold_str" translatable="false">524 samples</string>
    <string name="daytime_placehold_str" translatable="false">Monday, 11:32</string>
    <string name="date_placehold_str" translatable="false">January 9th</string>
    <string name="rpm_placehold_str" translatable="false">1200 rpm</string>
    <string name="speed_placehold_str" translatable="false">60 km/h</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_help">Ajuda</string>
    <string name="action_disclaimer">Aviso Legal</string>
    <string name="title_activity_plain_text">Gaso</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec rutrum lacus. Pellentesque dignissim maximus augue, eu maximus purus porta eget. Mauris gravida ac diam sit amet mattis. In hac habitasse platea dictumst. Donec id lectus interdum, sagittis orci vel, malesuada velit. Vivamus eu mollis odio. Cras rhoncus neque quam, vitae ultrices leo pellentesque id. Aenean ut ipsum metus. Morbi est orci, pharetra eu lorem nec, ultricies auctor dolor. Nunc aliquam nisl dolor, eu gravida quam porttitor a. Curabitur non massa mauris. Pellentesque ac nisl sit amet ante sollicitudin aliquet nec sed nulla. In consequat semper euismod.  Nullam tortor leo, vulputate id sapien at, sodales dignissim urna. Aliquam rutrum efficitur magna, sed varius tellus sagittis eget. Fusce aliquet non quam at porta. Quisque nec ultrices nulla, vitae pharetra arcu. Sed molestie vel orci consectetur ultricies. Aenean sit amet mollis dolor. Praesent condimentum neque in sapien pulvinar hendrerit et ac massa.  Duis id scelerisque purus. Aliquam pretium elit neque. Integer in erat consequat, sagittis massa in, molestie nisi. Praesent eu lorem ac odio lobortis vulputate ac in massa. Aenean eget dui sed ipsum lobortis porttitor. Phasellus consectetur sed est et dapibus. Morbi bibendum velit neque, in efficitur tellus sagittis non. Proin et tellus nec lectus sollicitudin euismod id a arcu. Praesent non luctus purus. Mauris sapien lorem, varius a dui nec, tempus gravida ipsum. Vestibulum vel vehicula enim. Quisque tristique condimentum quam nec fermentum. Ut nec dictum lorem. Phasellus eget tincidunt ex. In tempor congue neque, sed vehicula lectus luctus vitae. Sed odio magna, aliquet sed ultricies in, iaculis quis risus.</string>
    <string name="disclaimer_title">Aviso Legal</string>
    <string name="disclaimer_text"><![CDATA[O aplicativo Gaso é parte de um trabalho de pesquisa acadêmica, em vista disso não nos responsabilizamos por nenhum dano ao veículo ocorrido durante seu uso. Gaso ainda está em fase de experimentos, portanto ainda não é possível afirmar com exatidão a qualidade do combustível. Seus resultados são fruto do trabalho conjunto entre os departamentosde computação e engenharia mecânica da UFS, e são baseados nos dados obtidos do veículo e seu usuário. Ao utilizar o aplicativo, você estará contribuindo no processo de análise da qualidade de combustível, assim como na evolução da pesquisa. Caso você sinta lesado de qualquer forma entre em contato através do email contato.gaso@gmail.com]]></string>
    <string name="help_text"><![CDATA[Gaso é uma aplicação móvel que te auxilia a manter e navegar seu veículo de forma mais eficiente. Na tela Gás é possível obter informações sobre os postos de combustíveis da região, enquanto você pode gerenciar suas despesas com abastecimentos de combustível na tela Gastos. Já na tela inicial, Meu Carro, você pode gerenciar seu carros e obter informações sobre os mesmos conectando o aplicativo ao leitor OBDII plugado no veículo utilizado no momento. Para que você possa obter a melhor experiência possível, separamos algumas sugestões à serem seguidas.
O Gaso depende dos dados obtidos do veículo e seu usuário. Além das informações fornecidas pelo usuário, tais dados são obtidos através do GPS e de uma conexão Bluetooth. Logo, é necessário que tais recursos sejam habilitados e seu uso permitido ao aplicativo. A fim de efetuar a análise do combustível, tais dados são necessários. Quanto mais completos os dados, mais eficiente será a análise. Por completo, nos referimos a quão efetivamente os dados coletados refletem certa atividade. Sugerimos, por exemplo, que todos abastecimentos sejam registrados, e ao registrá-los, que todo os campos do formulário sejam preenchidos. Infelizmente, o Gaso atualmente não suporta a análise eficiente de combustível de diferentes tipos, então sugerimos que o usuário se restrinja à um tipo apenas. Ainda sobre abastecimentos, sugerimos que o tanque de combustível seja abastecido completamente a cada abastecimento e que o APP seja conectado ao dispositivo OBD o mais cedo possível para que nenhum dado do abastecimento seja perdido. Atualmente, o Gaso ao efetuar a análise de combustível no tanque procura considerar a quantidade de combustível que foi abastecida em cada posto de combustível, contudo, esse trabalho seria minimizado e a análise seria otimizada se tal combustível pertencesse apenas à um posto. Outra sugestão, seria conectar o aplicativo ao leitor OBDII antes de iniciar um percurso e somente interromper a conexão quando a viagem for concluída. Sugerimos também que ao efetuar a conexão, o veículo seja mantido em solo plano, pois o Gaso coleta o nível de combustível no tanque sempre que conectado ao leitor OBDII, e elevações no solo podem afetar esse cálculo.
Caso você encontre outras medidas que melhoraram sua experiência ao utilizar o Gaso ou tenha sugestões de funcionalidades a serem adicionadas, por favor, sinta-se livre para entrar em contato através do email contato.gaso@gmail.com.]]></string>
    <string name="help_title">Ajuda</string>
    <string name="evaluation">Avaliações</string>
</resources>