<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/map_menu_item"
        android:orderInCategory="100"
        android:title="@string/map"
        app:showAsAction="always"
        android:icon="@drawable/marker"/>

    <item android:id="@+id/stations_list_menu_item"
        android:orderInCategory="200"
        android:title="@string/stations_list"
        app:showAsAction="always"
        android:icon="@drawable/list"
        android:visible="false"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disclaimer"
        android:orderInCategory="300"
        android:title="@string/action_disclaimer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>