<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:orderInCategory="300"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_disclaimer"
        android:orderInCategory="300"
        android:title="@string/action_disclaimer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>